--- a/4_add_visual_elements.ipynb
+++ b/4_add_visual_elements.ipynb
@@ -1990,7 +1990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "8ebd5246",
    "metadata": {},
    "outputs": [
@@ -2190,7 +2190,7 @@
        "[21421 rows x 8 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2206,7 +2206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "ae0a2c51",
    "metadata": {},
    "outputs": [
@@ -2422,7 +2422,7 @@
        "[10500 rows x 10 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2440,7 +2440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "c66dcfdb",
    "metadata": {},
    "outputs": [
@@ -2559,7 +2559,7 @@
        "[280 rows x 3 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2571,7 +2571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "e96c99c2",
    "metadata": {},
    "outputs": [
@@ -2714,7 +2714,7 @@
        "[70 rows x 5 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2727,7 +2727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "b1e8a044",
    "metadata": {},
    "outputs": [
@@ -2870,7 +2870,7 @@
        "[70 rows x 5 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2882,7 +2882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "dce2d0b7",
    "metadata": {},
    "outputs": [
@@ -3098,7 +3098,7 @@
        "[10500 rows x 10 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3112,7 +3112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "beeb770c",
    "metadata": {},
    "outputs": [
@@ -3402,7 +3402,7 @@
        "[10500 rows x 14 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3422,7 +3422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "1b3054fd",
    "metadata": {},
    "outputs": [
@@ -3736,7 +3736,7 @@
        "[10500 rows x 16 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3750,7 +3750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "11417974",
    "metadata": {},
    "outputs": [
@@ -4089,7 +4089,7 @@
        "[10500 rows x 17 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4118,7 +4118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "1122eb36",
    "metadata": {},
    "outputs": [
@@ -4481,7 +4481,7 @@
        "[10500 rows x 19 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4495,7 +4495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "56f87946",
    "metadata": {},
    "outputs": [
@@ -4699,7 +4699,7 @@
        "[10500 rows x 9 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4712,7 +4712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "fb79ace1",
    "metadata": {},
    "outputs": [
@@ -4729,6 +4729,28 @@
     "max_profit = summ_dataset['max_profit'].sum()\n",
     "min_profit = summ_dataset['min_profit'].sum()\n",
     "print('By following the buying recommendations, minimum profit expected is ${}. \\n The maximun profit expected is ${}'.format(round(min_profit,2), round(max_profit,2)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "8e7ef21a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4078617894.0"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "invested = summ_dataset['buying_price'].sum()\n",
+    "invested"
    ]
   },
   {
